samples/_failures_safe/1761553516_a745c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13d54a2a.c: In function ‘main’:
./samples/SAFE/__tmp_13d54a2a.c:187:15: error: expected ‘;’ at end of input
  187 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_13d54a2a.c:187:9: error: expected declaration or statement at end of input
  187 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_13d54a2a.c:187:9: error: expected declaration or statement at end of input
